# codex-mcp

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
skills/discuss-with-multi-codex/: SKILL.md
src/codex_mcp/: server.py
