[project]
name = "codex-mcp"
version = "0.1.0"
description = "MCP server for querying OpenAI (Codex) models from Claude Code — sync, async, and multi-turn conversations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
codex-mcp = "codex_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_mcp"]
